# HorseMenu

./: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_issue.yml  feature_request.yml  improvement_request.yml
.github/workflows/: ci.yml  nightly.yml  pr-comment.yml
cmake/: async-logger.cmake  gtav-classes.cmake  imgui.cmake  json.cmake  minhook.cmake  rdr-classes.cmake  vulkan.cmake
src/: common.cpp  common.hpp  main.cpp
src/core/backend/: PatternCache.cpp  PatternCache.hpp
src/core/byte_patch_manager/: byte_patch_manager.cpp  byte_patch_manager.hpp
src/core/commands/: BoolCommand.cpp  BoolCommand.hpp  ColorCommand.cpp  ColorCommand.hpp  Command.cpp  Command.hpp  Commands.cpp  Commands.hpp  FeatureCommand.cpp  FeatureCommand.hpp  FloatCommand.cpp  FloatCommand.hpp  HotkeySystem.cpp  HotkeySystem.hpp  IntCommand.cpp  IntCommand.hpp  ListCommand.cpp  ListCommand.hpp  LoopedCommand.cpp  LoopedCommand.hpp  StringCommand.cpp  StringCommand.hpp  Vector3Command.cpp  Vector3Command.hpp
src/core/filemgr/: BaseObj.cpp  BaseObj.hpp  File.cpp  File.hpp  FileMgr.cpp  FileMgr.hpp  Folder.cpp  Folder.hpp
src/core/frontend/: ChatDisplay.cpp  ChatDisplay.hpp  Notifications.cpp  Notifications.hpp
src/core/frontend/manager/: Category.cpp  Category.hpp  Submenu.cpp  Submenu.hpp  UIItem.hpp  UIManager.cpp  UIManager.hpp
src/core/frontend/widgets/: imgui_colors.h
src/core/hooking/: BaseHook.cpp  BaseHook.hpp  CallHook.hpp  DetourHook.hpp  Hooking.cpp  Hooking.hpp  IATHook.hpp  MinHook.hpp  VMTHook.hpp  VtableHook.cpp  VtableHook.hpp
src/core/logger/: ExceptionHandler.cpp  ExceptionHandler.hpp  LogColor.hpp  LogHelper.cpp  LogHelper.hpp  LogSink.cpp  LogSink.hpp  StackTrace.cpp  StackTrace.hpp
src/core/memory/: BytePatch.cpp  BytePatch.hpp  Module.cpp  Module.hpp  ModuleMgr.cpp  ModuleMgr.hpp  Pattern.cpp  Pattern.hpp  PatternHash.hpp  PatternScanner.cpp  PatternScanner.hpp  PointerCalculator.hpp
src/core/misc/: RateLimiter.hpp
src/core/player_database/: PlayerDatabase.cpp  PlayerDatabase.hpp
src/core/renderer/: Renderer.cpp  Renderer.hpp
src/core/script_patch/: ScriptPatch.hpp  ScriptPatcherService.cpp
src/core/settings/: IStateSerializer.cpp  IStateSerializer.hpp  Settings.cpp  Settings.hpp
src/game/backend/: Detections.hpp  FiberPool.cpp  FiberPool.hpp  NativeHooks.cpp  NativeHooks.hpp  NodeHooks.cpp  NodeHooks.hpp  PersistentPlayerData.hpp  PlayerData.hpp  PlayerDatabase.cpp  PlayerDatabase.hpp  Players.cpp  Players.hpp  Protections.cpp  Protections.hpp  SavedLocations.cpp  SavedLocations.hpp  SavedVariables.cpp  SavedVariables.hpp  ScriptMgr.cpp  ScriptMgr.hpp  ScriptPatches.cpp  ScriptPatches.hpp  Self.cpp  Self.hpp  Voice.cpp  Voice.hpp  backend.cpp  backend.hpp
src/game/bigfeatures/: ContextMenu.cpp  ContextMenu.hpp  ContextMenus.hpp  CustomTeleport.cpp  CustomTeleport.hpp  Esp.cpp  Esp.hpp
src/game/commands/: PlayerCommand.cpp  PlayerCommand.hpp
src/game/features/: Emote.hpp  Features.cpp  Features.hpp
src/game/frontend/: ChatDisplay.cpp  ChatDisplay.hpp  ContextMenu.cpp  ContextMenu.hpp  ContextMenus.hpp  ESP.cpp  ESP.hpp  GUI.cpp  GUI.hpp  Menu.cpp  Menu.hpp  Overlay.cpp  Overlay.hpp
src/game/gta/: Natives.hpp  ScriptGlobal.cpp
src/game/hooks/: Hooks.hpp
src/game/hooks/GUI/: Vulkan.cpp  (+2 more)
src/game/pointers/: PointerCache.cpp  PointerCache.hpp  Pointers.cpp  Pointers.hpp
src/game/rdr/: Entity.cpp  Entity.hpp  Enums.hpp  GraphicsOptions.hpp  Natives.hpp  Network.cpp  Network.hpp  Nodes.cpp  Nodes.hpp  Object.cpp  Object.hpp  Packet.cpp  Packet.hpp  Ped.cpp  Ped.hpp  Player.cpp  Player.hpp  Pools.cpp  Pools.hpp  RenderingInfo.hpp  ScriptFunction.cpp  ScriptFunction.hpp  ScriptGlobal.cpp  ScriptGlobal.hpp  ScriptLocal.cpp  ScriptLocal.hpp  Scripts.cpp  Scripts.hpp  Vehicle.cpp  Vehicle.hpp  natives.hpp
src/game/services/: custom_teleport_service.cpp  custom_teleport_service.hpp
src/util/: Chat.cpp  Chat.hpp  GraphicsValue.hpp  Helpers.hpp  Joaat.cpp  Joaat.hpp  Math.hpp  Packet.cpp  Packet.hpp  Ped.cpp  Ped.hpp  PedModels.hpp  Protobufs.cpp  Protobufs.hpp  Rewards.cpp  Rewards.hpp  SpawnObject.cpp  SpawnObject.hpp  SpawnPed.cpp  SpawnPed.hpp  Storage.hpp  StrToHex.hpp  VehicleSpawner.cpp  VehicleSpawner.hpp  network.hpp  spectate.hpp  teleport.cpp  teleport.hpp
src/util/Storage/: Spoofing.hpp
src/util/libraries/: Emote.hpp  PedModels.hpp
(+361 files in other folders)
